<resources>
    <string name="app_name">MyApp</string>

    <string name="nr_0">0</string>
    <string name="nr_1">1</string>
    <string name="nr_2">2</string>
    <string name="nr_3">3</string>
    <string name="nr_4">4</string>
    <string name="nr_5">5</string>
    <string name="nr_6">6</string>
    <string name="nr_7">7</string>
    <string name="nr_8">8</string>
    <string name="nr_9">9</string>

    <string name="saskaitit">+</string>
    <string name="atnemt">-</string>
    <string name="reizinat">*</string>
    <string name="dalit">/</string>
    <string name="rezultats">=</string>

    <string name="dzest">C</string>
    <string name="komats">.</string>

</resources>